--- a/app/src/main/res/drawable/home_icon_foreground.xml
+++ b/app/src/main/res/drawable/home_icon_foreground.xml
@@ -3,13 +3,13 @@
     android:height="@dimen/icon_size"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFFFFF">
+    android:tint="?attr/colorOnSecondary">
   <group android:scaleX="0.58"
       android:scaleY="0.58"
       android:translateX="5.04"
       android:translateY="5.04">
     <path
-        android:fillColor="@android:color/white"
+        android:fillColor="?attr/colorOnSecondary"
         android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z"/>
   </group>
 </vector>
