--- a/app/src/main/res/layout/note_recycler_row.xml
+++ b/app/src/main/res/layout/note_recycler_row.xml
@@ -6,7 +6,7 @@
     android:layout_margin="5dp"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:minHeight="90dp"
         style="?attr/cardViewStyle"
         tools:ignore="MissingConstraints">
@@ -35,5 +35,5 @@
                 android:paddingBottom="5dp"
                 android:text="@string/home_name_placeholder" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
