--- a/app/src/main/res/layout/summary_recycler_row.xml
+++ b/app/src/main/res/layout/summary_recycler_row.xml
@@ -6,13 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         style="?attr/cardViewStyle"
-
         tools:ignore="MissingConstraints">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:padding="5dp"
             android:layout_height="match_parent">
 
             <TextView
@@ -33,5 +33,5 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:text="" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
