--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,19 +7,14 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="RecyclerStyleLarge">
-        <item name="android:layout_width">wrap_content</item>
+    <style name="RecyclerStyleLarge" parent="Widget.AppCompat.ListView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginStart">15dp</item>
+        <item name="android:layout_marginEnd">15dp</item>
         <item name="android:clickable">true</item>
         <item name="android:clipToPadding">false</item>
         <item name="android:focusable">true</item>
-        <item name="android:minWidth">300dp</item>
-        <item name="layout_constraintEnd_toEndOf">parent</item>
-        <item name="layout_constraintHorizontal_bias">0.5</item>
-        <item name="layout_constraintStart_toStartOf">parent</item>
-        <item name="layout_constraintTop_toTopOf">parent</item>
-        <item name="layout_constraintBottom_toBottomOf">parent</item>
-        <item name="layout_constraintVertical_bias">0.4</item>
-        <item name="android:layout_height">450dp</item>
+        <item name="android:layout_height">0dp</item>
     </style>
     
     <style name="CardStyle" parent="Widget.MaterialComponents.CardView">
@@ -33,29 +28,16 @@
         <item name="layout_constraintHorizontal_bias">0.5</item>
         <item name="layout_constraintStart_toStartOf">parent</item>
         <item name="layout_constraintTop_toTopOf">parent</item>
-    </style>
-
-    <style name="CardStyle.Light">
-
-    </style>
-    <style name="CardStyle.Dark">
-
+        <item name="strokeWidth">1dp</item>
+        <item name="strokeColor">?attr/colorOnPrimary</item>
+        <item name="android:backgroundTint">?attr/colorPrimary</item>
     </style>
 
     <style name="ChoreyButton" parent="Widget.AppCompat.Button">
-    </style>
-    <style name="ChoreyButton.Light">
-        <item name="backgroundTint">@color/secondaryColor</item>
-    </style>
-    <style name="ChoreyButton.Dark">
-        <item name="backgroundTint">@color/purple_200</item>
+        <item name="backgroundTint">?attr/colorSecondary</item>
     </style>
 
     <!-- Bar buttons -->
     <style name="ChoreyBarButton" parent="Widget.AppCompat.Button.Borderless">
-    </style>
-    <style name="ChoreyBarButton.Light">
-    </style>
-    <style name="ChoreyBarButton.Dark">
     </style>
 </resources>
