--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Chorey" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Chorey" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
@@ -12,11 +12,14 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="cardViewStyle">@style/CardStyle.Light</item>
-        <item name="buttonStyle">@style/ChoreyButton.Light</item>
-        <item name="buttonBarButtonStyle">@style/ChoreyBarButton.Light</item>
+        <!-- Component styles -->
+        <item name="cardViewStyle">@style/CardStyle</item>
+        <item name="buttonStyle">@style/ChoreyButton</item>
+        <item name="buttonBarButtonStyle">@style/ChoreyBarButton</item>
         <item name="recyclerViewStyle">@style/RecyclerStyleLarge</item>
 
-
+        <!-- Remove the top title -->
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
     </style>
 </resources>
