--- a/app/src/main/res/layout/menu_recycler_row.xml
+++ b/app/src/main/res/layout/menu_recycler_row.xml
@@ -46,6 +46,7 @@
                 android:text="@string/home_item_members"
                 app:layout_constraintEnd_toStartOf="@id/homesListMembers"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 />
 
             <TextView
@@ -55,27 +56,29 @@
                 android:textColor="?attr/colorOnPrimary"
                 android:text="@string/home_item_zero"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/homesListPointsText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="?attr/colorOnPrimary"
-                android:text="@string/home_item_score"
-                app:layout_constraintEnd_toStartOf="@id/homesListPoints"
-                app:layout_constraintTop_toBottomOf="@id/homesListMembersText"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 />
 
-            <TextView
-                android:id="@+id/homesListPoints"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="?attr/colorOnPrimary"
-                android:text="@string/home_item_zero"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/homesListMembers" />
+<!--            <TextView-->
+<!--                android:id="@+id/homesListPointsText"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:textColor="?attr/colorOnPrimary"-->
+<!--                android:text="@string/home_item_score"-->
+<!--                app:layout_constraintEnd_toStartOf="@id/homesListPoints"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/homesListMembersText"-->
+<!--                />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/homesListPoints"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:textColor="?attr/colorOnPrimary"-->
+<!--                android:text="@string/home_item_zero"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/homesListMembers" />-->
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
