--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="RoundedCornersDialog" parent="Theme.Chorey">
+        <item name="dialogCornerRadius">16dp</item>
+        <item name="android:windowBackground">@drawable/dialog_background</item>
+    </style>
+
     <style name="RecyclerStyleLarge" parent="Widget.AppCompat.ListView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_marginStart">15dp</item>
