--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,13 +38,14 @@
 
         <ImageButton
             android:id="@+id/addMemberButton"
-            style="?attr/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="?attr/imageButtonStyle"
+            android:layout_width="@dimen/large_text_size"
+            android:layout_height="@dimen/large_text_size"
             android:contentDescription="@string/add_members_button"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:src="@mipmap/ic_add_member_round"
+            android:layout_marginEnd="30dp"
             />
 
 
@@ -54,20 +55,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/home_name_placeholder"
-            android:paddingEnd="20dp"
-            android:paddingStart="20dp"
             />
 
         <ImageButton
             android:id="@+id/homeToMenuButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/large_text_size"
+            android:layout_height="@dimen/large_text_size"
             android:contentDescription="@string/home_item_place_holder"
-            style="?attr/buttonStyle"
+            style="?attr/imageButtonStyle"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:src="@mipmap/home_icon_round"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="30dp"
             />
     </LinearLayout>
 
