--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="ivory">#FFFFFFF0</color>
 
 <!--    Brown colors -->
 <!--    <color name="primaryColor">#632700</color>-->
