--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,20 +21,29 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:elevation">10dp</item>
-        <item name="cardCornerRadius">10dp</item>
-        <item name="android:padding">5dp</item>
+        <item name="cardCornerRadius">15dp</item>
+        <item name="android:padding">0dp</item>
         <item name="layout_constraintBottom_toBottomOf">parent</item>
         <item name="layout_constraintEnd_toEndOf">parent</item>
         <item name="layout_constraintHorizontal_bias">0.5</item>
         <item name="layout_constraintStart_toStartOf">parent</item>
         <item name="layout_constraintTop_toTopOf">parent</item>
-        <item name="strokeWidth">1dp</item>
-        <item name="strokeColor">?attr/colorOnPrimary</item>
+        <item name="strokeWidth">3dp</item>
+        <item name="strokeColor">@color/ivory</item>
         <item name="android:backgroundTint">?attr/colorPrimary</item>
+    </style>
+
+    <style name="Theme.Chorey.Login">
+        <item name="android:windowBackground">?attr/colorPrimary</item>
     </style>
 
     <style name="ChoreyButton" parent="Widget.AppCompat.Button">
         <item name="backgroundTint">?attr/colorSecondary</item>
+
+    </style>
+
+    <style name="ChoreyButton.Icon">
+        <item name="android:background">@drawable/button_round</item>
     </style>
 
     <!-- Bar buttons -->
