--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,7 @@
         <!-- Component styles -->
         <item name="cardViewStyle">@style/CardStyle</item>
         <item name="buttonStyle">@style/ChoreyButton</item>
+        <item name="imageButtonStyle">@style/ChoreyButton.Icon</item>
         <item name="buttonBarButtonStyle">@style/ChoreyBarButton</item>
         <item name="recyclerViewStyle">@style/RecyclerStyleLarge</item>
 
