--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -59,12 +59,12 @@
                 android:layout_width="@dimen/large_text_size"
                 android:layout_height="@dimen/large_text_size"
                 android:contentDescription="@string/add_members_button"
-                android:backgroundTint="@android:color/transparent"
+                android:backgroundTint="@color/ivory"
                 android:layout_marginEnd="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/baseline_more_vert_24" />
+                android:src="@drawable/baseline_account_circle_24" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
@@ -90,11 +90,18 @@
             android:background="?attr/colorPrimaryVariant"
             >
 
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:orientation="horizontal" />
+
             <Button
                 android:id="@+id/authButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/auth_button_logout"
+                android:text="@string/auth_button_login"
                 style="?attr/buttonStyle"
                 />
         </LinearLayout>
@@ -121,19 +128,6 @@
         app:layout_constraintBottom_toTopOf="@id/menuBottomLayout"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        />
-
-    <Button
-        android:id="@+id/removeHomeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/menuBottomLayout"
-        android:text="@string/remove_home_button"
-        style="?attr/buttonStyle"
-        />
-
+        android:contentDescription="@string/add_icon_description" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
