AddHome dialog + design

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,5 +48,6 @@
 
     <!-- Bar buttons -->
     <style name="ChoreyBarButton" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:textColor">?attr/colorOnPrimary</item>
     </style>
 </resources>
